--- a/stock_restrict_lot/i18n/stock_restrict_lot.pot
+++ b/stock_restrict_lot/i18n/stock_restrict_lot.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 15.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,6 +14,7 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: stock_restrict_lot
+#. odoo-python
 #: code:addons/stock_restrict_lot/models/stock_move.py:0
 #, python-format
 msgid ""
