--- a/stock_picking_return_lot/i18n/stock_picking_return_lot.pot
+++ b/stock_picking_return_lot/i18n/stock_picking_return_lot.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -14,21 +14,21 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: stock_picking_return_lot
-#: model:ir.model.fields,field_description:stock_picking_return_lot.field_stock_return_picking__display_name
-msgid "Display Name"
+#: model:ir.model.fields,field_description:stock_picking_return_lot.field_stock_return_picking_line__lot_id
+msgid "Lot/Serial Number"
 msgstr ""
 
 #. module: stock_picking_return_lot
-#: model:ir.model.fields,field_description:stock_picking_return_lot.field_stock_return_picking__id
-msgid "ID"
-msgstr ""
-
-#. module: stock_picking_return_lot
-#: model:ir.model.fields,field_description:stock_picking_return_lot.field_stock_return_picking____last_update
-msgid "Last Modified on"
+#: model:ir.model.fields,field_description:stock_picking_return_lot.field_stock_return_picking_line__lots_visible
+msgid "Lots Visible"
 msgstr ""
 
 #. module: stock_picking_return_lot
 #: model:ir.model,name:stock_picking_return_lot.model_stock_return_picking
 msgid "Return Picking"
+msgstr ""
+
+#. module: stock_picking_return_lot
+#: model:ir.model,name:stock_picking_return_lot.model_stock_return_picking_line
+msgid "Return Picking Line"
 msgstr ""
